--- a/Modules/BWO/Resources/assets/sass/_layout.scss
+++ b/Modules/BWO/Resources/assets/sass/_layout.scss
@@ -6,14 +6,48 @@ html{
 header{
   padding: 10px 20px 0px;
   .menus{
-    width:570px;
-    float:right;
-    padding-right: 10px;
+    width:100%;
+    .navbar-menu-user{
+      float:right;
+    }
+    .navbar-menu-main{
+      float:left;
+    }
+    @include mq(xs){
+      width:485px;
+      float:right;
+      .navbar-menu-user{
+        float:none;
+      }
+      .navbar-menu-user{
+        float:none;
+      }
+    }
+
     .navbar{
       margin-bottom:0px;
       min-height: 38px;
       .navbar-header-user, #user-menu{
         float:right;
+      }
+      #btn-user-menu{
+        i{
+          font-size:30px;
+          &:hover{
+            color:$brand-red-color;
+          }
+        }
+      }
+      #btn-main-menu{
+        i{
+          font-size:30px;
+          &:hover{
+            color:$brand-red-color;
+          }
+        }
+      }
+      .navbar-collapse{
+        padding-right:0px;
       }
       #user-menu{
         li{
@@ -25,7 +59,10 @@ header{
         }
       }
       .navbar-header-main, #main-menu{
-        float:right;
+        float:left;
+        @include mq(xs){
+          float:right;
+        }
       }
       li{
         list-style-type: none;
@@ -36,7 +73,10 @@ header{
 
       }
       #main-menu{
-        li{
+        padding-left:0px;
+        ul{
+          padding-left:0px;
+          li{
           a{
             color:$brand-black-color;
             margin:0 14px;
@@ -50,12 +90,48 @@ header{
             }
           }
         }
+        }
       }
 
     }
+
   }
   .logo-container{
     overflow: hidden;
+  //  width: 130px;
+    margin: 0 auto;
+  //  height: 85px;
+    #logo-big{
+      display: none;
+    }
+    #logo-resp{
+      display: block;
+    }
+    @include mq(xs){
+      margin: 0;
+      @include mq(870){
+      //  width:431px;
+        #logo-big{
+          display: block;
+        }
+        #logo-resp{
+          display: none;
+        }
+      }
+    }
+    .corporatiu{
+        text-align: center;
+        @include mq(xs){
+          text-align: left;
+        }
+        img{
+          width: 260px;
+          @include mq(870){
+            width:431px;
+          }
+        }
+    }
+
   }
 }
 
@@ -81,7 +157,7 @@ body {
 }
 
 footer{
-    padding:25px 0;
+    padding:25px 15px;
     background-color: $brand-dark-gray-color;
     text-align: center;
     .footer-logo{
@@ -90,15 +166,97 @@ footer{
       margin:0 auto;
     }
     .footer-info{
+      text-align: center;
+      .second-line-footer{
 
+        .footer-social{
+          width: 75px;
+          position: relative;
+          top: -280px;
+          float:right;
+          @include mq(xs){
+            top: 0;
+          }
+          a{
+            font-size:18px;
+            color:#fff;
+            .fa-facebook{
+              background-color:#3b5998;
+              padding: 3px 6px 1px;
+            }
+            .fa-linkedin{
+              background-color:#0077b5;
+              padding: 2px 3.5px;
+            }
+            .fa-viadeo{
+              background-color:#f07355;
+              padding: 2px 3.5px;
+            }
+          }
+        }
+        .footer-copyright{
+          font-size:12px;
+          color:$brand-white-color;
+          //position: relative;
+          //right: -75px;
+          //@include mq(xs){
+        //    right: 0;
+        //a  }
+          a{
+            text-decoration:none;
+            color:$brand-white-color;
+            &:hover{
+              color:$brand-red-color;
+            }
+          }
+        }
+      }
+      .first-line-footer{
+        overflow: hidden;
+        ul{
+
+          li{
+            list-style-type: none;
+            margin:0 auto;
+            a{
+              text-decoration:none;
+              color:$brand-white-color;
+              &:hover{
+                color:$brand-red-color;
+              }
+            }
+          }
+        }
+      }
     }
-    @include mq(md){
+
+    @include mq(xs){
       text-align: left;
       .footer-logo{
         float:left;
       }
       .footer-info{
         overflow: hidden;
+        text-align: right;
+        .second-line-footer{
+          .footer-social{
+            float: right;
+          }
+          .footer-copyright{
+            padding: 8px 10px;;
+            float: right;
+          }
+        }
+        .first-line-footer{
+          ul{
+            float:right;
+            li{
+              margin-left:30px;
+
+            }
+          }
+        }
       }
+
     }
 }
