--- a/public/modules/rrhh/css/app.css
+++ b/public/modules/rrhh/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);.horizontal-container {
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);.horizontal-container {
   max-width: 100%;
   margin: 0 auto;
 }
@@ -119,6 +119,61 @@ li {
   min-height: 400px;
 }
 
+.sitelist {
+  /*DRAG AND DROP */
+  /* END DRAG AND DROP */
+}
+
+.sitelist .dashed-border {
+  border: 1px dashed #acacac;
+  padding: 10px;
+}
+
+.sitelist .content-field-dropper {
+  border: 1px dashed #acacac;
+  padding: 20px;
+}
+
+.sitelist #ajouter {
+  cursor: pointer;
+  padding: 5px;
+}
+
+.sitelist #ajouter h2 {
+  margin-top: 10px;
+}
+
+.sitelist .input-name-option {
+  font-weight: bold;
+  font-size: 18px;
+  width: 90%;
+  float: left;
+  margin-bottom: 0px;
+}
+
+.sitelist .input-value-option {
+  width: 90%;
+  margin-bottom: 5px;
+}
+
+.sitelist .remove-action {
+  cursor: pointer;
+}
+
+.sitelist [draggable] {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+      user-select: none;
+  /* Required to make elements draggable in old WebKit */
+  -khtml-user-drag: element;
+  -webkit-user-drag: element;
+}
+
+.sitelist .dragable-option {
+  cursor: move;
+}
+
 /*
 //layouts
 @import 'layout';
@@ -160,139 +215,4 @@ li {
 //offer applications
 @import 'offer-applications';
 */
-
-.horizontal-container {
-  max-width: 100%;
-  margin: 0 auto;
-}
-
-.horizontal-inner-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 30px;
-}
-
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-b {
-  font-weight: bold;
-}
-
-.separator {
-  clear: both;
-  font-size: 1px;
-  line-height: 0;
-  height: 1px;
-  pointer-events: none;
-}
-
-.rounded {
-  border-radius: 200px;
-}
-
-.uppercase {
-  text-transform: uppercase;
-}
-
-.animate {
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.box-sizing,
-div,
-header,
-footer,
-aside,
-section,
-article,
-h1,
-h2,
-h3,
-p,
-form,
-a,
-ul,
-li {
-  -webkit-box-sizing: border-box;
-  /* Safari/Chrome, other WebKit */
-  /* Firefox, other Gecko */
-  box-sizing: border-box;
-  /* Opera/IE 8+ */
-}
-
-div,
-header,
-footer,
-aside,
-section,
-article,
-h1,
-h2,
-h3,
-p,
-form,
-a,
-ul,
-li {
-  position: relative;
-  vertical-align: top;
-}
-
-.badge-notify {
-  background: red;
-  position: relative;
-  top: -20px;
-  left: -35px;
-  padding: 3px 5px;
-  font-size: 10px;
-  right: 8px;
-  top: -11px;
-  left: auto;
-}
-
-.bg-white {
-  background-color: #fff;
-}
-
-.background-image-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  top: 0px;
-  left: 0px;
-}
-
-.background-image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0px;
-  left: 0px;
-  z-index: 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/*
-//layouts
-@import 'layout';
-@import 'buttons';
-@import 'form';
-
-@import 'home';
-@import 'results';
-@import 'offer';
-@import 'blog-index';
-@import 'blog-post';
-@import 'modals';
-@import 'reset-password';
-@import 'candidate-home';
-@import 'candidate-profile';
-@import 'candidate-spontanious';
-@import 'contact';*/
 
