--- a/Modules/BWO/Resources/assets/sass/_layout.scss
+++ b/Modules/BWO/Resources/assets/sass/_layout.scss
@@ -164,6 +164,76 @@ body {
      }
   }
 
+
+  /* Display list items side by side */
+  ul{
+    &.breadcrumb{
+      list-style: none;
+      background-color: transparent;
+      padding: 0px 5px;
+      li{
+        display: inline;
+        @include font(12,20,400);
+        a {
+          color: $brand-black-color;
+          text-decoration: none;
+          &:hover {
+            color: $brand-red-color;
+            text-decoration: none;
+          }
+        }
+      }
+      li+li:before {
+        padding: 2px;
+        color: black;
+        content: "/\00a0";
+      }
+
+    }
+  }
+  .pagination-container{
+    padding:15px;
+    width:100%;
+    text-align:center;
+    a{
+      text-decoration: none;
+      color:$brand-dark-gray-color;
+      @include font(16,18,600);
+      margin:0 5px;
+      &:hover, &.active{
+        color:$brand-red-color;
+      }
+      .round{
+        border-radius: 50%;
+        -webkit-box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
+        height: 18px;
+        width:18px;
+        i{
+          @include font(16,18,600);
+        }
+      }
+    }
+  }
+  .offers-3-container{
+    background-color: white;
+    padding:10px;
+    .horizontal-inner-container{
+      -webkit-box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
+      padding:20px;
+
+    }
+    h2{
+      @include font (18,18,600);
+      color:$brand-dark-gray-color;
+      text-align:center;
+      margin-bottom:25px;
+    }
+  }
+
 }
 
 footer{
