--- a/Modules/BWO/Resources/assets/sass/_variables.scss
+++ b/Modules/BWO/Resources/assets/sass/_variables.scss
@@ -10,6 +10,8 @@ $brand-black-color : #000; //dark
 $brand-white-color : #fff; //light gray
 $brand-dark-gray-color : #666666; //dark gray
 $brand-light-gray-color : #d3d1ae; //light gray
+$brand-lightest-gray-color : #e0dfc7; //lightesr gray
+
 $brand-red-color: #ff0000;
 
 
