--- a/public/modules/bwo/css/app.css
+++ b/public/modules/bwo/css/app.css
@@ -10842,15 +10842,80 @@ body .banner h1 {
   margin: 45px 0 20px 0;
 }
 
-body .blog-container {
-  padding: 10px;
-  margin-top: -80px;
+body .offers-container .blog-container {
+  background-color: white;
+  padding: 20px;
+  color: #666666;
 }
 
-body .blog-container .horizontal-inner-container {
+body .offers-container .blog-container .categories-container {
+  margin-top: 20px;
+}
+
+body .offers-container .blog-container .categories-container h3 {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 600;
+}
+
+body .offers-container .blog-container .posts-list {
+  padding: 20px 0;
+}
+
+body .offers-container .blog-container .posts-list .post-box {
+  padding: 18px 0 0;
+  text-align: left;
   -webkit-box-shadow: 0px 0px 41px -8px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 41px -8px rgba(0, 0, 0, 0.75);
-  padding: 0;
+  margin-bottom: 20px;
+}
+
+body .offers-container .blog-container .posts-list .post-box .image {
+  height: 192px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+body .offers-container .blog-container .posts-list .post-box .title {
+  margin: 10px 0 0;
+  color: #666666;
+  font-size: 20px;
+  line-height: 22px;
+  font-weight: 600;
+  height: 42px;
+  padding: 15px;
+}
+
+body .offers-container .blog-container .posts-list .post-box p {
+  color: #d3d1ae;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 300;
+  margin-bottom: 15px;
+  height: 14px;
+  padding: 0 15px;
+}
+
+body .offers-container .blog-container .posts-list .post-box p.description {
+  color: #666666;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 300;
+  margin-bottom: 15px;
+  height: 100px;
+}
+
+body .offers-container .blog-container .posts-list .post-box .detail {
+  color: #ff0000;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+body .offers-container .blog-container .posts-list .post-box .detail:hover {
+  color: #666666;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 body .banner h1 {
