fix breadcum ol

--- a/Modules/BWO/Resources/assets/sass/_layout.scss
+++ b/Modules/BWO/Resources/assets/sass/_layout.scss
@@ -210,7 +210,7 @@ body {
 
 
   /* Display list items side by side */
-  ul{
+  ol{
     &.breadcrumb{
       list-style: none;
       background-color: transparent;
